tests/go_testdata_golden_override/builtinObjectFieldsEx_bad.jsonnet.golden
type error: expected object, got number
    argument <obj> evaluation
    builtinObjectFieldsEx_bad.jsonnet:1:19-28: function <builtin_object_fields_ex> call